fix alignment v3

--- a/_scss/parts/_global.scss
+++ b/_scss/parts/_global.scss
@@ -663,15 +663,14 @@ header {
   .restaurant-item {
     p {
       font-size: 18px;
+      min-height: 81px;
     }
     display: block;
     width: 100%;
   }
   a {
-    display: flex;
+    display: block;
     transition: all ease-in-out 180ms;
-    height: 100%;
-    flex-direction: column;
     &:hover {
       transform: scale(1.035);
     }
@@ -913,8 +912,6 @@ a {
     font-family: 'Montserrat', sans-serif;
     padding: 9px 14px;
     transition: all ease-in-out 180ms;
-    margin-left: auto;
-    margin-right: auto;
     &:hover {
       background-color: $textColor;
       color: $white;
