--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -558,12 +558,11 @@ header {
     display: block;
     width: 100%; }
     .restaurant-container .restaurant-item p {
-      font-size: 18px; }
+      font-size: 18px;
+      min-height: 81px; }
   .restaurant-container a {
-    display: flex;
-    transition: all ease-in-out 180ms;
-    height: 100%;
-    flex-direction: column; }
+    display: block;
+    transition: all ease-in-out 180ms; }
     .restaurant-container a:hover {
       transform: scale(1.035); }
   .restaurant-container img {
@@ -755,9 +754,7 @@ a.btn {
   background-color: #c61f26;
   font-family: 'Montserrat', sans-serif;
   padding: 9px 14px;
-  transition: all ease-in-out 180ms;
-  margin-left: auto;
-  margin-right: auto; }
+  transition: all ease-in-out 180ms; }
   span.btn:hover,
   a.btn:hover {
     background-color: #1f1f21;
@@ -976,6 +973,12 @@ a.btn {
   .topnav .container-fluid {
     padding: 0 20px; } }
 @media (max-width: 768px) {
+  .restaurant-container .restaurant-item p {
+    min-height: auto; }
+
+  .heading-text:after {
+    right: -29px; }
+
   .chef-qoute-container {
     padding-top: 35px; }
 
@@ -1016,9 +1019,6 @@ a.btn {
   #restaurant .restaurant-container .restaurant-info {
     gap: 25px; }
 
-  .heading-text:after {
-    right: -29px; }
-
   header {
     height: 430px; }
 
@@ -1053,3 +1053,4 @@ a.btn {
 
   #our-history-section {
     padding-top: 70px; } }
+
